Created attachment 148441 [details] File with character problems Open attached. I see scattered characters in Version: 6.3.0.0.alpha0+ (x64) Build ID: 8511bc6b9bf5dcaf0ce6ecee65be54552bc73bd5 CPU threads: 8; OS: Windows 10.0; UI render: default; VCL: win; Locale: en-US (en_US); UI-Language: en-US Calc: threaded It is OK in Version: 6.3.0.0.alpha0+ (x64) Build ID: b8e450a54936560cdac00ab4c70ef80c20cfaf99 CPU threads: 8; OS: Windows 10.0; UI render: default; VCL: win; TinderBox: Win-x86_64@42, Branch:master, Time: 2019-01-18_02:33:46 Locale: en-US (en_US); UI-Language: en-US Calc: threaded
Created attachment 148442 [details] Screenshot of the broken display
You see it already if you start a new presentation without template and set the layout to "Title, Content".
It is something in the initial display. If you save and reopen the file, the text is OK.
Regression introduced by: https://cgit.freedesktop.org/libreoffice/core/commit/?id=f00fc7ee17153ff70fa4fb2052a5b555af0c054c author Dmitriy Shilin <dshil@fastmail.com> 2019-01-08 04:20:29 -0800 committer Mike Kaganski <mike.kaganski@collabora.com> 2019-01-18 15:20:43 +0100 commit f00fc7ee17153ff70fa4fb2052a5b555af0c054c (patch) tree a49f2b853a072303b43b04b49b9e93f75224003d parent 8e50e218d26dfab1038570476e11d616f91d3768 (diff) tdf#107792 vcl/win: introduce ScopedSelectedHFONT Bisected with: bibisect-win32-6.3 Adding Cc: to Dmitriy Shilin
Thanks! I hope I will explore the regression tomorrow.
https://gerrit.libreoffice.org/#/c/67187/
Dmitriy Shilin committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/+/77c9bcb1af09d20a813cc3a16c50a57ab09eb0b5%5E%21 tdf#122820 vcl/win: do not use un-named C++ objects It will be available in 6.3.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Verified in Version: 6.3.0.0.alpha0+ Build ID: 3839f155874213669c1b1c648879e8e3d36b2f43 CPU threads: 16; OS: Windows 6.3; UI render: default; VCL: win; Locale: en-GB (en_GB); UI-Language: en-US Calc: threaded Closing as VERIFIED FIXED @Dmitriy Shilin, thank you so much for fixing this issue!!