tdf#122820 vcl/win: do not use un-named C++ objects

Change-Id: Ifbaf53ff002f8f61f9f49ab9bb14e7598e006402
Reviewed-on: https://gerrit.libreoffice.org/67187
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>